2005-11-18  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/os-support/linux/Makefile.am:
	Bug #4928: Unbreak Makefile.am for Alpha chips. (Stefan DeRoeck)

2005-11-16  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	Fix builds when not building the Xorg DDX.

2005-11-14  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* GL/glx/glcontextmodes.c:
	* GL/glx/glcontextmodes.h:
	* GL/symlink-mesa.sh:
	Use glcontextmodes.[ch] from Mesa.

2005-11-14  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* GL/glx/Makefile.am:
	Add GL_CFLAGS so that GLX can find its proto headers when using
	separate build dirs.

2005-11-13  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: 
	Default xkb-output directory needs trailing slash.

2005-11-13  Alan Coopersmith  <alan.coopersmith@sun.com>

	* Xprint/doc/Makefile.am:
	* hw/dmx/Makefile.am:
	* hw/dmx/config/Makefile.am:
	* hw/vfb/Makefile.am:
	* hw/xfree86/doc/man/Makefile.am:
	* hw/xfree86/getconfig/Makefile.am:
	* hw/xfree86/utils/gtf/Makefile.am:
	* hw/xfree86/utils/kbd_mode/Makefile.am:
	* hw/xfree86/utils/pcitweak/Makefile.am:
	* hw/xfree86/utils/scanpci/Makefile.am:
	* hw/xfree86/utils/xorgcfg/Makefile.am:
	* hw/xfree86/utils/xorgconfig/Makefile.am:
	* hw/xnest/Makefile.am:
	* hw/xwin/Makefile.am:
	Bug #5019 <https://bugs.freedesktop.org/show_bug.cgi?id=5019>
	xserver installs manpages into 'man1' instead of 'man1x'

2005-11-12  Alan Coopersmith  <alan.coopersmith@sun.com>

	* include/dix-config.h.in: 
	Bug #4832 <https://bugs.freedesktop.org/show_bug.cgi?id=4832>
	use RGB_DB not RGB_PATH as that's what configure defines
	(Jürg Billeter  <j@bitron.ch>)
  
2005-11-09  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	* include/dix-config.h.in:
	* include/xorg-server.h.in:
	Fix typo to enable DGA support.

	* hw/xfree86/dixmods/extmod/Makefile.am:
	EXTMODULE is required to build DGA support into extmod.

2005-11-09  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac: