@@ -3,6 +3,10 @@
 	* hw/xfree86/os-support/linux/Makefile.am:
 	Bug #4928: Unbreak Makefile.am for Alpha chips. (Stefan DeRoeck)
 
+	* configure.ac:
+	* hw/xfree86/dixmods/Makefile.am:
+	Bug #4824: Build XTrap support by default, matching monolith.
+
 2005-11-16  Adam Jackson  <ajax@freedesktop.org>
 
 	* configure.ac:
